Implemented findAllQuestionnaireHistoryEntries from the id of a User